--- a/WebContent/HKProject/index.html
+++ b/WebContent/HKProject/index.html
@@ -58,9 +58,9 @@
 				<li><a href="OrderQuery.html">订单查询</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="login.html">登陆</a></li>
+				<li><a href="/HKProject/login.html">登陆</a></li>
 				<li><a href="#">|</a></li>
-				<li><a href="reg.jsp">注册</a></li>
+				<li><a href="/HKProject/reg.jsp">注册</a></li>
 			</ul>
 
 		</div>
